k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx-service
  namespace: learning1
spec:
  host: nginx-service-learning1.apps-crc.testing
  port:
    targetPort: http
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
